--- a/index.html
+++ b/index.html
@@ -133,10 +133,14 @@
                 <li><img class="icon" src="img/1xbetua.com.png" alt="github"><a href="https://1xbetua.com/?bf=5c6ae4a19a325_515575637" target="_blank">1xbetua.com`</a></li>
               </ul>			  
               <ul id="">
-                <span class="badge badge-dark">*Рынок*</span>
+                <span class="badge badge-dark">*Отследить посылку*</span>
                 <hr>
                 <li><img class="icon" src="img/novaposhta.ua.ico" alt="github"><a href="https://novaposhta.ua/ru/tracking" target="_blank">novaposhta.ua</a></li>
                 <li><img class="icon" src="img/intime.ua.ico" alt="github"><a href="https://intime.ua/" target="_blank">intime.ua</a></li>
+              </ul>
+              <ul id="">
+                <span class="badge badge-dark">*Рынок*</span>
+                <hr>
                 <li><img class="icon" src="img/olx.ua.ico" alt="github"><a href="https://www.olx.ua/" target="_blank">olx.ua</a></li>
                 <li><img class="icon" src="img/besplatka.ua.ico" alt="github"><a href="https://besplatka.ua/" target="_blank">besplatka.ua</a></li>
                 <li><img class="icon" src="img/shafa.ua.png" alt="github"><a href="https://shafa.ua/" target="_blank">shafa.ua</a></li>
@@ -160,8 +164,14 @@
             <div class="col-sm">
               <ul id="">
                 <span class="badge badge-dark">*Банкинг*</span>
-                <hr>будет заполнен до 23.02.2019 
-                <!-- <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li> -->
+                <hr>
+                <li><img class="icon" src="img/kurs.com.ua.ico" alt="github"><a href="https://kurs.com.ua/" target="_blank">kurs.com.ua</a><span class="opisi">Курс/Конвертер валют</span></li>
+                <li><img class="icon" src="img/bestchange.ru.png" alt="github"><a href="https://www.bestchange.ru/" target="_blank">bestchange.ru</a><span class="opisi">Обмен валют</span></li>
+                <li><img class="icon" src="img/privat24.ua.ico" alt="github"><a href="https://www.privat24.ua/" target="_blank">privat24.ua</a><span class="opisi">Онлайн</span></li>
+                <li><img class="icon" src="img/online.oschadbank.ua.ico" alt="github"><a href="https://online.oschadbank.ua/wb/" target="_blank">online.oschadbank.ua</a><span class="opisi">Онлайн</span></li>
+                <li><img class="icon" src="img/online.aval.ua.ico" alt="github"><a href="https://online.aval.ua/ibank/home?0" target="_blank">online.aval.ua</a><span class="opisi">Онлайн</span></li>
+				<li><img class="icon" src="img/payoneer.com.ico" alt="github"><a href="https://www.payoneer.com/raf/?rid=0FA0C022-2289-43EC-8770-3B4409BD83AF" target="_blank">payoneer.com`</a><span class="opisi">Интернет КОШЕЛЕК</span></li>
+                <li><img class="icon" src="img/payeer.com.ico" alt="github"><a href="https://payeer.com/?partner=1687223" target="_blank">payeer.com`</a><span class="opisi">Интернет КОШЕЛЕК</span></li>
               </ul>
               <ul id="">
                 <span class="badge badge-dark">*Комуналка*</span>
@@ -733,15 +743,6 @@
                 <li><img class="icon" src="img/hotels24.ua.ico" alt="github"><a href="https://letyshops.com/r/hotels24-4qh7st5ct0kk08" target="_blank">hotels24.ua`</a></li>
                 <li><img class="icon" src="img/rentalcars.com.ico" alt="github"><a href="https://letyshops.com/r/rentalcars-4qh7st5ct0qok0" target="_blank">rentalcars.com`</a></li>
               </ul>
-              <ul id="">
-                <span class="badge badge-success">*Страхование/Кредит/Финансы*</span>
-                <hr>
-                <li><img class="icon" src="img/alfabank.ua.ico" alt="github"><a href="https://letyshops.com/r/alfa-bank-ukraina-4qh7st5ct0ys4s" target="_blank">alfabank.ua`</a></li>
-                <li><img class="icon" src="img/globalcredit.ua.ico" alt="github"><a href="https://letyshops.com/r/global-credit-ua-4qh7st5ct0ys4s" target="_blank">globalcredit.ua`</a></li>
-                <li><img class="icon" src="img/ideabank.ua.ico" alt="github"><a href="https://letyshops.com/r/idea-bank-ua-4qh7st5ct0ys4s" target="_blank">ideabank.ua`</a></li>
-                <li><img class="icon" src="img/hotline.finance.ico" alt="github"><a href="https://letyshops.com/r/hotline-4qh7st5ct12cok" target="_blank">hotline.finance`</a></li>
-                <li><img class="icon" src="img/vuso.ua.ico" alt="github"><a href="https://letyshops.com/r/vuso-ua-4qh7st5ct12cog" target="_blank">vuso.ua`</a></li>
-              </ul>
             </div>
 
           </div>
@@ -842,91 +843,74 @@
 
 
         <div class="tab-pane fade" id="bank" role="tabpanel" aria-labelledby="bank-tab">
-          <div class="row">раздел будет запущен/сформирован до 23.02.2019
+          <div class="row">
 
-            <!--             <div class="col-sm">
+            <div class="col-sm">
               <ul id="">
-                <span class="badge badge-success">*Підгрупа-СИНЯЯ*</span>
+                <span class="badge badge-success">*Курс/Конвертер валют*</span>
                 <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
+                <li><img class="icon" src="img/finance.i.ua.ico" alt="github"><a href="https://finance.i.ua/" target="_blank">finance.i.ua</a></li>
+                <li><img class="icon" src="img/kurs.com.ua.ico" alt="github"><a href="https://kurs.com.ua/" target="_blank">kurs.com.ua</a></li>
+                <li><img class="icon" src="img/minfin.com.ua.ico" alt="github"><a href="https://minfin.com.ua/currency/" target="_blank">minfin.com.ua</a></li>
               </ul>
               <ul id="">
-                <span class="badge badge-success">*Підгрупа-ЧЕРНАЯ*</span>
+                <span class="badge badge-success">*Обмен валют*</span>
                 <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
+                <li><img class="icon" src="img/bestchange.ru.png" alt="github"><a href="https://www.bestchange.ru/" target="_blank">bestchange.ru</a></li>
+                <li><img class="icon" src="img/kurses.com.ua.png" alt="github"><a href="http://kurses.com.ua/" target="_blank">kurses.com.ua</a></li>
+                <li><img class="icon" src="img/old.kurs.com.ua.png" alt="github"><a href="https://old.kurs.com.ua/webmoney" target="_blank">old.kurs.com.ua</a></li>
+                <li><img class="icon" src="img/bitfinex.com.png" alt="github"><a href="https://www.bitfinex.com/?locale=ru" target="_blank">bitfinex.com</a></li>
               </ul>
               <ul id="">
-                <span class="badge badge-success">*Підгрупа-ЖЕЛТАЯ*</span>
+                <span class="badge badge-success">*Рейтинг банков Украины*</span>
                 <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
-              </ul>
-              <ul id="">
-                <span class="badge badge-success">*Підгрупа-ЗЕЛЕНАЯ*</span>
-                <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
-              </ul>
-              <ul id="">
-                <span class="badge badge-success">*Підгрупа-КРАСНАЯ*</span>
-                <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
+                <li><img class="icon" src="img/minfin.com.ua.ico" alt="github"><a href="https://minfin.com.ua/ua/banks/rating/" target="_blank">minfin.com.ua</a></li>
+                <li><img class="icon" src="img/maanimo.com.ico" alt="github"><a href="https://maanimo.com/rates/banks" target="_blank">maanimo.com</a></li>
+                <li><img class="icon" src="img/banker.ua.png" alt="github"><a href="https://banker.ua/officialrating/" target="_blank">banker.ua</a></li>
               </ul>
             </div>
 
             <div class="col-sm">
               <ul id="">
-                <span class="badge badge-success">*Підгрупа-СИНЯЯ*</span>
+                <span class="badge badge-success">*Банк/Банк ОНЛАЙН*</span>
                 <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
+                <li><img class="icon" src="img/privatbank.ua.png" alt="github"><a href="https://privatbank.ua/ru" target="_blank">privatbank.ua</a></li>
+                <li><img class="icon" src="img/privat24.ua.ico" alt="github"><a href="https://www.privat24.ua/" target="_blank">privat24.ua</a><span class="opisi">Онлайн</span></li>
+                <li><img class="icon" src="img/oschadbank.ua.ico" alt="github"><a href="https://oschadbank.ua/ua" target="_blank">oschadbank.ua</a></li>
+                <li><img class="icon" src="img/online.oschadbank.ua.ico" alt="github"><a href="https://online.oschadbank.ua/wb/" target="_blank">online.oschadbank.ua</a><span class="opisi">Онлайн</span></li>
+                <li><img class="icon" src="img/aval.ua.ico" alt="github"><a href="https://www.aval.ua/" target="_blank">aval.ua</a></li>
+                <li><img class="icon" src="img/online.aval.ua.ico" alt="github"><a href="https://online.aval.ua/ibank/home?0" target="_blank">online.aval.ua</a><span class="opisi">Онлайн</span></li>
+                <li><img class="icon" src="img/alfabank.ua.ico" alt="github"><a href="https://alfabank.ua/" target="_blank">alfabank.ua</a></li>
+                <li><img class="icon" src="img/my.alfabank.com.ua.ico" alt="github"><a href="https://my.alfabank.com.ua/login" target="_blank">my.alfabank.com.ua</a><span class="opisi">Онлайн</span></li>
+                <li><img class="icon" src="img/my.ukrsibbank.com.png" alt="github"><a href="https://my.ukrsibbank.com/ua/personal/" target="_blank">my.ukrsibbank.com</a></li>
+                <li><img class="icon" src="img/my.ukrsibbank.com.png" alt="github"><a href="https://online.ukrsibbank.com/ibank/" target="_blank">online.ukrsibbank.com</a><span class="opisi">Онлайн</span></li>
               </ul>
               <ul id="">
-                <span class="badge badge-success">*Підгрупа-ЧЕРНАЯ*</span>
+                <span class="badge badge-success">*Страхование/Кредит/Финансы*</span>
                 <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
-              </ul>
-              <ul id="">
-                <span class="badge badge-success">*Підгрупа-ЖЕЛТАЯ*</span>
-                <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
-              </ul>
-              <ul id="">
-                <span class="badge badge-success">*Підгрупа-ЗЕЛЕНАЯ*</span>
-                <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
-              </ul>
-              <ul id="">
-                <span class="badge badge-success">*Підгрупа-КРАСНАЯ*</span>
-                <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
+                <li><img class="icon" src="img/alfabank.ua.ico" alt="github"><a href="https://letyshops.com/r/alfa-bank-ukraina-4qh7st5ct0ys4s" target="_blank">alfabank.ua`</a></li>
+                <li><img class="icon" src="img/globalcredit.ua.ico" alt="github"><a href="https://letyshops.com/r/global-credit-ua-4qh7st5ct0ys4s" target="_blank">globalcredit.ua`</a></li>
+                <li><img class="icon" src="img/ideabank.ua.ico" alt="github"><a href="https://letyshops.com/r/idea-bank-ua-4qh7st5ct0ys4s" target="_blank">ideabank.ua`</a></li>
+                <li><img class="icon" src="img/hotline.finance.ico" alt="github"><a href="https://letyshops.com/r/hotline-4qh7st5ct12cok" target="_blank">hotline.finance`</a></li>
+                <li><img class="icon" src="img/vuso.ua.ico" alt="github"><a href="https://letyshops.com/r/vuso-ua-4qh7st5ct12cog" target="_blank">vuso.ua`</a></li>
               </ul>
             </div>
 
             <div class="col-sm">
               <ul id="">
-                <span class="badge badge-success">*Підгрупа-СИНЯЯ*</span>
+                <span class="badge badge-success">*Интернет КОШЕЛЕК*</span>
                 <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
+                <li><img class="icon" src="img/payoneer.com.ico" alt="github"><a href="https://www.payoneer.com/raf/?rid=0FA0C022-2289-43EC-8770-3B4409BD83AF" target="_blank">payoneer.com`</a></li>
+                <li><img class="icon" src="img/payeer.com.ico" alt="github"><a href="https://payeer.com/?partner=1687223" target="_blank">payeer.com`</a></li>
+                <li><img class="icon" src="img/skrill.com.ico" alt="github"><a href="https://account.skrill.com/signup?rid=94770593" target="_blank">skrill.com`</a></li>
+                <li><img class="icon" src="img/neteller.com.ico" alt="github"><a href="https://www.neteller.com/ru" target="_blank">neteller.com</a></li>
+                <li><img class="icon" src="img/webmoney.ru.ico" alt="github"><a href="https://www.webmoney.ru/" target="_blank">webmoney.ru</a><span class="opisi">нужен VPN</span></li>
+                <li><img class="icon" src="img/money.yandex.ru.ico" alt="github"><a href="https://money.yandex.ru/" target="_blank">money.yandex.ru</a><span class="opisi">нужен VPN</span></li>
+                <li><img class="icon" src="img/qiwi.com.png" alt="github"><a href="https://qiwi.com/" target="_blank">qiwi.com</a></li>
+                <li><img class="icon" src="img/paypal.com.ico" alt="github"><a href="https://www.paypal.com/ua/webapps/mpp/home" target="_blank">paypal.com</a></li>
+                <li><img class="icon" src="img/payza.eu.ico" alt="github"><a href="https://www.payza.eu/" target="_blank">https://www.payza.eu/</a></li>
               </ul>
-              <ul id="">
-                <span class="badge badge-success">*Підгрупа-ЧЕРНАЯ*</span>
-                <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
-              </ul>
-              <ul id="">
-                <span class="badge badge-success">*Підгрупа-ЖЕЛТАЯ*</span>
-                <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
-              </ul>
-              <ul id="">
-                <span class="badge badge-success">*Підгрупа-ЗЕЛЕНАЯ*</span>
-                <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
-              </ul>
-              <ul id="">
-                <span class="badge badge-success">*Підгрупа-КРАСНАЯ*</span>
-                <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
-              </ul>
-            </div> -->
+            </div>
 
           </div>
         </div>
