--- a/index.html
+++ b/index.html
@@ -165,13 +165,13 @@
               <ul id="">
                 <span class="badge badge-dark">*Банкинг*</span>
                 <hr>
-                <li><img class="icon" src="img/kurs.com.ua.ico" alt="github"><a href="https://kurs.com.ua/" target="_blank">kurs.com.ua</a><span class="opisi">Курс/Конвертер валют</span></li>
-                <li><img class="icon" src="img/bestchange.ru.png" alt="github"><a href="https://www.bestchange.ru/" target="_blank">bestchange.ru</a><span class="opisi">Обмен валют</span></li>
                 <li><img class="icon" src="img/privat24.ua.ico" alt="github"><a href="https://www.privat24.ua/" target="_blank">privat24.ua</a><span class="opisi">Онлайн</span></li>
                 <li><img class="icon" src="img/online.oschadbank.ua.ico" alt="github"><a href="https://online.oschadbank.ua/wb/" target="_blank">online.oschadbank.ua</a><span class="opisi">Онлайн</span></li>
                 <li><img class="icon" src="img/online.aval.ua.ico" alt="github"><a href="https://online.aval.ua/ibank/home?0" target="_blank">online.aval.ua</a><span class="opisi">Онлайн</span></li>
 				<li><img class="icon" src="img/payoneer.com.ico" alt="github"><a href="https://www.payoneer.com/raf/?rid=0FA0C022-2289-43EC-8770-3B4409BD83AF" target="_blank">payoneer.com`</a><span class="opisi">Интернет КОШЕЛЕК</span></li>
                 <li><img class="icon" src="img/payeer.com.ico" alt="github"><a href="https://payeer.com/?partner=1687223" target="_blank">payeer.com`</a><span class="opisi">Интернет КОШЕЛЕК</span></li>
+                <li><img class="icon" src="img/kurs.com.ua.ico" alt="github"><a href="https://kurs.com.ua/" target="_blank">kurs.com.ua</a><span class="opisi">Курс/конверт валют</span></li>
+                <li><img class="icon" src="img/bestchange.ru.png" alt="github"><a href="https://www.bestchange.ru/" target="_blank">bestchange.ru</a><span class="opisi">Обмен валют</span></li>
               </ul>
               <ul id="">
                 <span class="badge badge-dark">*Комуналка*</span>
