--- a/index.html
+++ b/index.html
@@ -175,8 +175,15 @@
               </ul>
               <ul id="">
                 <span class="badge badge-dark">*Комуналка*</span>
-                <hr>будет заполнен до 25.02.2019 
-                <li><img class="icon" src="img/ukrtelecom.ua.png" alt="ukrtelecom.ua"><a href="https://new.ukrtelecom.ua/payment/#generate-bill" target="_blank">Укртелеком СЧЕТ</a></li>
+                <hr> 
+                <li><img class="icon" src="img/minfin.com.ua.ico" alt="minfin.com.ua"><a href="https://index.minfin.com.ua/tariff/gas/" target="_blank">minfin.com.ua</a><span class="opisi">офц.цена.газ</span></li>
+                <li><img class="icon" src="img/naftogazpostach.com.png" alt="naftogazpostach.com"><a href="https://naftogazpostach.com/" target="_blank">naftogazpostach.com</a><span class="opisi">Газ.Кабинет2019</span></li>
+                <li><img class="icon" src="img/minfin.com.ua.ico" alt="minfin.com.ua"><a href="https://index.minfin.com.ua/tariff/electric/" target="_blank">minfin.com.ua</a><span class="opisi">офц.цена.электр.</span></li>
+                <li><img class="icon" src="img/kiroe.com.ua.ico" alt="kiroe.com.ua"><a href="http://kiroe.com.ua/" target="_blank">kiroe.com.ua</a><span class="opisi">Кир.обленерго.Кабинет</span></li>
+                <li><img class="icon" src="img/ukrtelecom.ua.png" alt="ukrtelecom.ua"><a href="https://new.ukrtelecom.ua/payment/#generate-bill" target="_blank">ukrtelecom.ua</a><span class="opisi">Укртелеком СЧЕТ</span></li>
+				<li><img class="icon" src="img/kyivstar.ua.ico" alt="kyivstar.ua"><a href="https://kyivstar.ua/" target="_blank">kyivstar.ua</a></li>
+                <li><img class="icon" src="img/vodafone.ua.png" alt="vodafone.ua"><a href="https://www.vodafone.ua/ru" target="_blank">vodafone.ua</a></li>
+                <li><img class="icon" src="img/lifecell.ua.png" alt="lifecell.ua"><a href="https://www.lifecell.ua/" target="_blank">lifecell.ua</a></li>
               </ul>
               <ul id="">
                 <span class="badge badge-dark">*Другое*</span>
