--- a/index.html
+++ b/index.html
@@ -170,17 +170,17 @@
                 <li><img class="icon" src="img/online.aval.ua.ico" alt="online.aval.ua"><a href="https://online.aval.ua/ibank/home?0" target="_blank">online.aval.ua</a><span class="opisi">Онлайн</span></li>
 				<li><img class="icon" src="img/payoneer.com.ico" alt="payoneer"><a href="https://www.payoneer.com/raf/?rid=0FA0C022-2289-43EC-8770-3B4409BD83AF" target="_blank">payoneer`</a><span class="opisi">Интернет кошелек</span></li>
                 <li><img class="icon" src="img/payeer.com.ico" alt="payeer"><a href="https://payeer.com/?partner=1687223" target="_blank">payeer`</a><span class="opisi">Интернет кошелек</span></li>
-                <li><img class="icon" src="img/kurs.com.ua.ico" alt="kurs.com.ua"><a href="https://kurs.com.ua/" target="_blank">kurs.com.ua</a><span class="opisi">Курс/конверт валют</span></li>
+                <li><img class="icon" src="img/kurs.com.ua.ico" alt="kurs.com.ua"><a href="https://kurs.com.ua/" target="_blank">kurs</a><span class="opisi">Курс/конверт валют</span></li>
                 <li><img class="icon" src="img/bestchange.ru.png" alt="bestchange.ru"><a href="https://www.bestchange.ru/" target="_blank">bestchange.ru</a><span class="opisi">Обмен валют</span></li>
               </ul>
               <ul id="">
                 <span class="badge badge-dark">*Комуналка*</span>
                 <hr> 
                 <li><img class="icon" src="img/minfin.com.ua.ico" alt="minfin.com.ua"><a href="https://index.minfin.com.ua/tariff/gas/" target="_blank">minfin.com.ua</a><span class="opisi">офц.цена.газ</span></li>
-                <li><img class="icon" src="img/naftogazpostach.com.png" alt="naftogazpostach.com"><a href="https://naftogazpostach.com/" target="_blank">naftogazpostach.com</a><span class="opisi">Газ.Кабинет2019</span></li>
+                <li><img class="icon" src="img/naftogazpostach.com.png" alt="naftogazpostach.com"><a href="https://naftogazpostach.com/" target="_blank">naftogazpostach</a><span class="opisi">Кабинет.Газ.2019</span></li>
                 <li><img class="icon" src="img/minfin.com.ua.ico" alt="minfin.com.ua"><a href="https://index.minfin.com.ua/tariff/electric/" target="_blank">minfin.com.ua</a><span class="opisi">офц.цена.электр.</span></li>
-                <li><img class="icon" src="img/kiroe.com.ua.ico" alt="kiroe.com.ua"><a href="http://kiroe.com.ua/" target="_blank">kiroe.com.ua</a><span class="opisi">Кир.обленерго.Кабинет</span></li>
-                <li><img class="icon" src="img/ukrtelecom.ua.png" alt="ukrtelecom.ua"><a href="https://new.ukrtelecom.ua/payment/#generate-bill" target="_blank">ukrtelecom.ua</a><span class="opisi">Укртелеком СЧЕТ</span></li>
+                <li><img class="icon" src="img/kiroe.com.ua.ico" alt="kiroe.com.ua"><a href="http://kiroe.com.ua/" target="_blank">kiroe</a><span class="opisi">Кабинет.Кир.обленерго</span></li>
+                <li><img class="icon" src="img/ukrtelecom.ua.png" alt="ukrtelecom.ua"><a href="https://new.ukrtelecom.ua/payment/#generate-bill" target="_blank">ukrtelecom</a><span class="opisi">Укртелеком СЧЕТ</span></li>
 				<li><img class="icon" src="img/kyivstar.ua.ico" alt="kyivstar.ua"><a href="https://kyivstar.ua/" target="_blank">kyivstar.ua</a></li>
                 <li><img class="icon" src="img/vodafone.ua.png" alt="vodafone.ua"><a href="https://www.vodafone.ua/ru" target="_blank">vodafone.ua</a></li>
                 <li><img class="icon" src="img/lifecell.ua.png" alt="lifecell.ua"><a href="https://www.lifecell.ua/" target="_blank">lifecell.ua</a></li>
@@ -443,17 +443,17 @@
                 <li><img class="icon" src="img/stopmusic.net.ico" alt="stopmusic.net"><a href="https://stopmusic.net/" target="_blank">stopmusic.net</a></li>
                 <li><img class="icon" src="img/muzofon.com.ico" alt="muzofon.com"><a href="http://muzofon.com/" target="_blank">muzofon.com</a></li>
                 <li><img class="icon" src="img/vk.com.ico" alt="vk.com/mzk"><a href="https://vk.com/mzk" target="_blank">vk.com/mzk</a><span class="opisi">нужен VPN</span></li>
-                <li><img class="icon" src="img/vk.com.ico" alt="vk.com/exclusive_muzic"><a href="https://vk.com/exclusive_muzic" target="_blank">vk.com/exclusive_muzic</a><span class="opisi">нужен VPN</span></li>
-                <li><img class="icon" src="img/vk.com.ico" alt="vk.com/hit_bit"><a href="https://vk.com/hit_bit" target="_blank">vk.com/hit_bit</a><span class="opisi">нужен VPN</span></li>
-                <li><img class="icon" src="img/web.telegram.org.ico" alt="t.me/hit_beat"><a href="https://t.me/hit_beat" target="_blank">telegram/hit_bit</a><span class="opisi">нужен TELEGRAM</span></li>
+                <li><img class="icon" src="img/vk.com.ico" alt="vk.com/exclusive_muzic"><a href="https://vk.com/exclusive_muzic" target="_blank">vk/exclusive_muzic</a><span class="opisi">нужен VPN</span></li>
+                <li><img class="icon" src="img/vk.com.ico" alt="vk.com/hit_bit"><a href="https://vk.com/hit_bit" target="_blank">vk/hit_bit</a><span class="opisi">нужен VPN</span></li>
+                <li><img class="icon" src="img/web.telegram.org.ico" alt="t.me/hit_beat"><a href="https://t.me/hit_beat" target="_blank">t/hit_bit</a><span class="opisi">нужен TELEGRAM</span></li>
               </ul>
               <ul id="">
                 <span class="badge badge-success">*Музыка СКАЧАТЬ*</span>
                 <hr>
                 <li><img class="icon" src="img/xtremex3.com.ico" alt="xtremex3.com"><a href="http://xtremex3.com/" target="_blank">xtremex3.com</a></li>
                 <li><img class="icon" src="img/z1.fm.ico" alt="z1.fm"><a href="https://z1.fm/" target="_blank">z1.fm</a></li>
-                <li><img class="icon" src="img/nnmclub.to.png" alt="nnmclub.to"><a href="http://nnmclub.to/forum/portal.php?c=25" target="_blank">nnmclub-Сборники</a><span class="opisi">нужен TORRENT</span></li>
-                <li><img class="icon" src="img/nnmclub.to.png" alt="nnmclub.to"><a href="http://nnmclub.to/forum/index.php?c=16" target="_blank">nnmclub-Вся.Музыка</a><span class="opisi">нужен TORRENT</span></li>
+                <li><img class="icon" src="img/nnmclub.to.png" alt="nnmclub.to"><a href="http://nnmclub.to/forum/portal.php?c=25" target="_blank">nnm.Сборники</a><span class="opisi">нужен TORRENT</span></li>
+                <li><img class="icon" src="img/nnmclub.to.png" alt="nnmclub.to"><a href="http://nnmclub.to/forum/index.php?c=16" target="_blank">nnm.Вся.Музыка</a><span class="opisi">нужен TORRENT</span></li>
               </ul>
             </div>
 
@@ -486,7 +486,7 @@
                 <hr>
                 <li><img class="icon" src="img/wargaming.net.ico" alt="wargaming.net"><a href="https://ru.wargaming.net/" target="_blank">wargaming.net</a></li>
                 <li><img class="icon" src="img/warthunder.ru.ico" alt="warthunder.ru"><a href="https://warthunder.ru/" target="_blank">warthunder.ru</a></li>
-                <li><img class="icon" src="img/torrent-igruha.org.ico" alt="torrent-igruha.org"><a href="https://torrent-igruha.org/top10-online.html" target="_blank">torrent-igruha.org</a><span class="opisi">нужен TORRENT</span></li>
+                <li><img class="icon" src="img/torrent-igruha.org.ico" alt="torrent-igruha.org"><a href="https://torrent-igruha.org/top10-online.html" target="_blank">torrent-igruha</a><span class="opisi">нужен TORRENT</span></li>
               </ul>
               <ul id="">
                 <span class="badge badge-success">*Инфо ТОП*</span>
@@ -927,17 +927,17 @@
 
             <div class="col-sm">
               <ul id="">
-                <span class="badge badge-warning">*Легка-оплата*</span>
+                <span class="badge badge-warning">*Легкие-оплаты*</span>
                 <hr>
-                <li><img class="icon" src="img/portmone.com.ua.ico" alt="portmone.com.ua"><a href="https://www.portmone.com.ua/" target="_blank">portmone.com.ua</a><span class="opisi">Платіжна система</span></li>
+                <li><img class="icon" src="img/portmone.com.ua.ico" alt="portmone.com.ua"><a href="https://www.portmone.com.ua/" target="_blank">portmone</a><span class="opisi">Платежная система</span></li>
               </ul>
               <ul id="">
                 <span class="badge badge-success">*ГАЗ*</span>
                 <hr>
                 <li><img class="icon" src="img/minfin.com.ua.ico" alt="minfin.com.ua"><a href="https://index.minfin.com.ua/tariff/gas/" target="_blank">minfin.com.ua</a><span class="opisi">офц.цена.газ</span></li>
-                <li><img class="icon" src="img/prostobank.ua.png" alt="prostobank.ua"><a href="http://www.prostobank.ua/spravochniki/indikatory_rynka/gas_tariff target="_blank">prostobank.ua</a><span class="opisi">цена.газ</span></li>
-                <li><img class="icon" src="img/naftogazpostach.com.png" alt="naftogazpostach.com"><a href="https://naftogazpostach.com/" target="_blank">naftogazpostach.com</a><span class="opisi">Газ.Кабинет2019</span></li>
-                <li><img class="icon" src="img/gasolina-online.com.png" alt="gasolina-online.com"><a href="https://gasolina-online.com/" target="_blank">gasolina</a><span class="opisi">Газ.Кабинет(старый)</span></li>
+                <li><img class="icon" src="img/prostobank.ua.png" alt="prostobank.ua"><a href="http://www.prostobank.ua/spravochniki/indikatory_rynka/gas_tariff" target="_blank">prostobank.ua</a><span class="opisi">цена.газ</span></li>
+                <li><img class="icon" src="img/naftogazpostach.com.png" alt="naftogazpostach.com"><a href="https://naftogazpostach.com/" target="_blank">naftogazpostach</a><span class="opisi">Кабинет.Газ.2019</span></li>
+                <li><img class="icon" src="img/gasolina-online.com.png" alt="gasolina-online.com"><a href="https://gasolina-online.com/" target="_blank">gasolina</a><span class="opisi">Кабинет.Газ.(старый)</span></li>
                 <li><img class="icon" src="img/104.ua.png" alt="104.ua"><a href="https://104.ua/ua/" target="_blank">104.ua</a><span class="opisi">Поиск компании</span></li>
               </ul>
               <ul id="">
@@ -946,7 +946,7 @@
                 <li><img class="icon" src="img/minfin.com.ua.ico" alt="minfin.com.ua"><a href="https://index.minfin.com.ua/tariff/electric/" target="_blank">minfin.com.ua</a><span class="opisi">офц.цена.электр.</span></li>
                 <li><img class="icon" src="img/prostobank.ua.png" alt="prostobank.ua"><a href="http://www.prostobank.ua/spravochniki/indikatory_rynka/electric_tariff" target="_blank">prostobank.ua</a><span class="opisi">цена.электр.</span></li>
                 <li><img class="icon" src="img/kresc.com.ua.png" alt="kresc.com.ua"><a href="http://kresc.com.ua/index.html" target="_blank">kresc.com.ua</a><span class="opisi">Киров.ОЕК</span></li>
-                <li><img class="icon" src="img/kiroe.com.ua.ico" alt="kiroe.com.ua"><a href="http://kiroe.com.ua/" target="_blank">kiroe.com.ua</a><span class="opisi">Кир.обленерго.Кабинет</span></li>
+                <li><img class="icon" src="img/kiroe.com.ua.ico" alt="kiroe.com.ua"><a href="http://kiroe.com.ua/" target="_blank">kiroe.com</a><span class="opisi">Кабинет.Кир.обленерго</span></li>
               </ul>
               <ul id="">
                 <span class="badge badge-success">*Вода*</span>
@@ -964,9 +964,9 @@
               <ul id="">
                 <span class="badge badge-success">*Интернет-кабельний*</span>
                 <hr>
-                <li><img class="icon" src="img/ukrtelecom.ua.png" alt="ukrtelecom.ua"><a href="https://new.ukrtelecom.ua/internet/" target="_blank">ukrtelecom.ua</a><span class="opisi">Укртелеком Тариф</span></li>
-                <li><img class="icon" src="img/ukrtelecom.ua.png" alt="ukrtelecom.ua"><a href="https://new.ukrtelecom.ua/payment/#generate-bill" target="_blank">ukrtelecom.ua</a><span class="opisi">Укртелеком СЧЕТ</span></li>
-                <li><img class="icon" src="img/my.ukrtelecom.ua.png" alt="my.ukrtelecom.ua"><a href="http://www.my.ukrtelecom.ua/" target="_blank">my.ukrtelecom.ua</a><span class="opisi">Укртелеком КАБИНЕТ</span></li>
+                <li><img class="icon" src="img/ukrtelecom.ua.png" alt="ukrtelecom.ua"><a href="https://new.ukrtelecom.ua/internet/" target="_blank">ukrtelecom</a><span class="opisi">Укртелеком Тариф</span></li>
+                <li><img class="icon" src="img/ukrtelecom.ua.png" alt="ukrtelecom.ua"><a href="https://new.ukrtelecom.ua/payment/#generate-bill" target="_blank">ukrtelecom</a><span class="opisi">Укртелеком СЧЕТ</span></li>
+                <li><img class="icon" src="img/my.ukrtelecom.ua.png" alt="my.ukrtelecom.ua"><a href="http://www.my.ukrtelecom.ua/" target="_blank">my.ukrtelecom</a><span class="opisi">Укртелеком КАБИНЕТ</span></li>
                 <li><img class="icon" src="img/novom.ulan.in.ua.png" alt="novom.ulan.in.ua"><a href="http://novom.ulan.in.ua/" target="_blank">novom.ulan.in.ua</a><span class="opisi">Ulan ISP</span></li>
                 <li><img class="icon" src="img/shtorm.net.ico" alt="shtorm.net"><a href="https://www.shtorm.net/uk" target="_blank">shtorm.net</a><span class="opisi">Shtorm</span></li>
               </ul>
@@ -974,15 +974,15 @@
                 <span class="badge badge-success">*Интернет-мобильный*</span>
                 <hr>
                 <li><img class="icon" src="img/kyivstar.ua.ico" alt="kyivstar.ua"><a href="https://kyivstar.ua/" target="_blank">kyivstar.ua</a></li>
-                <li><img class="icon" src="img/kyivstar.ua.ico" alt="pay.kyivstar.ua"><a href="https://pay.kyivstar.ua/" target="_blank">pay.kyivstar.ua</a><span class="opisi">Пополнение Киевстар</span></li>
+                <li><img class="icon" src="img/kyivstar.ua.ico" alt="pay.kyivstar.ua"><a href="https://pay.kyivstar.ua/" target="_blank">pay.kyivstar.ua</a><span class="opisi">Пополн.Киевстар</span></li>
                 <li><img class="icon" src="img/vodafone.ua.png" alt="vodafone.ua"><a href="https://www.vodafone.ua/ru" target="_blank">vodafone.ua</a></li>
-                <li><img class="icon" src="img/vodafone.ua.png" alt="pay.vodafone.ua"><a href="https://pay.vodafone.ua/" target="_blank">pay.vodafone.ua</a><span class="opisi">Пополнение Vodafone</span></li>
+                <li><img class="icon" src="img/vodafone.ua.png" alt="pay.vodafone.ua"><a href="https://pay.vodafone.ua/" target="_blank">pay.vodafone.ua</a><span class="opisi">Пополн.Vodafone</span></li>
                 <li><img class="icon" src="img/lifecell.ua.png" alt="lifecell.ua"><a href="https://www.lifecell.ua/" target="_blank">lifecell.ua</a></li>
-                <li><img class="icon" src="img/lifecell.ua.png" alt="oplata.lifecell.ua"><a href="https://oplata.lifecell.ua/" target="_blank">oplata.lifecell.ua</a><span class="opisi">Пополнение Lifecell</span></li>
+                <li><img class="icon" src="img/lifecell.ua.png" alt="oplata.lifecell.ua"><a href="https://oplata.lifecell.ua/" target="_blank">oplata.lifecell.ua</a><span class="opisi">Пополн.Lifecell</span></li>
                 <li><img class="icon" src="img/3mob.ua.ico" alt="3mob.ua"><a href="http://3mob.ua/" target="_blank">3mob.ua</a></li>
                 <li><img class="icon" src="img/intertelecom.ua.ico" alt="intertelecom.ua"><a href="http://www.intertelecom.ua/" target="_blank">intertelecom.ua</a></li>
-                <li><img class="icon" src="img/intertelecom.ua.ico" alt="intertelecom.ua"><a href="http://www.intertelecom.ua/payments" target="_blank">intertelecom</a><span class="opisi">Пополнение Intertelecom</span></li>				
-                <li><img class="icon" src="img/intertelecom.ua.ico" alt="assa.intertelecom.ua"><a href="https://assa.intertelecom.ua/ru/login" target="_blank">assa.intertelecom</a><span class="opisi">Кабинет Intertelecom</span></li>
+                <li><img class="icon" src="img/intertelecom.ua.ico" alt="intertelecom.ua"><a href="http://www.intertelecom.ua/payments" target="_blank">intertelecom</a><span class="opisi">Пополн.Intertelecom</span></li>				
+                <li><img class="icon" src="img/intertelecom.ua.ico" alt="assa.intertelecom.ua"><a href="https://assa.intertelecom.ua/ru/login" target="_blank">assa.intertelecom</a><span class="opisi">Кабинет.Int-com</span></li>
               </ul>
             </div>
 
@@ -990,15 +990,15 @@
               <ul id="">
                 <span class="badge badge-success">*ИНФО от minfin.com.ua*</span>
                 <hr>
-                <li><img class="icon" src="img/minfin.com.ua.ico" alt="minfin.com.ua"><a href="https://index.minfin.com.ua/labour/salary/min/" target="_blank">Минимальная заработная плата</a></li>
+                <li><img class="icon" src="img/minfin.com.ua.ico" alt="minfin.com.ua"><a href="https://index.minfin.com.ua/labour/salary/min/" target="_blank">Миним.зараб.плата</a></li>
                 <li><img class="icon" src="img/minfin.com.ua.ico" alt="minfin.com.ua"><a href="https://index.minfin.com.ua/labour/salary/average/" target="_blank">Средняя заработная плата</a></li>
-                <li><img class="icon" src="img/minfin.com.ua.ico" alt="minfin.com.ua"><a href="https://index.minfin.com.ua/labour/wagemin/" target="_blank">Прожиточный минимум в Украине</a></li>
+                <li><img class="icon" src="img/minfin.com.ua.ico" alt="minfin.com.ua"><a href="https://index.minfin.com.ua/labour/wagemin/" target="_blank">Прожит.миним.в.Украине</a></li>
                 <li><img class="icon" src="img/minfin.com.ua.ico" alt="minfin.com.ua"><a href="https://index.minfin.com.ua/economy/index/inflation/" target="_blank">Индекс инфляции</a></li>
               </ul>
               <ul id="">
                 <span class="badge badge-success">*ИНФО другое*</span>
                 <hr>
-                <li><img class="icon" src="img/buhoblik.org.ua.ico" alt="buhoblik.org.ua"><a href="http://www.buhoblik.org.ua/kadry-zarplata/pensii/2827-2827-minimalnaya-pensiya.html" target="_blank">Минимальная пенсия 2019 в Украине</a></li>
+                <li><img class="icon" src="img/buhoblik.org.ua.ico" alt="buhoblik.org.ua"><a href="http://www.buhoblik.org.ua/kadry-zarplata/pensii/2827-2827-minimalnaya-pensiya.html" target="_blank">Миним.пенсия.в.Украине</a></li>
               </ul>
             </div>
 
