--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                 <span class="badge badge-dark">*Комуналка*</span>
                 <hr> 
                 <li><img class="icon" src="img/minfin.com.ua.ico" alt="minfin.com.ua"><a href="https://index.minfin.com.ua/tariff/gas/" target="_blank">minfin.com.ua</a><span class="opisi">офц.цена.газ</span></li>
-                <li><img class="icon" src="img/naftogazpostach.com.png" alt="naftogazpostach.com"><a href="https://naftogazpostach.com/" target="_blank">naftogazpostach</a><span class="opisi">Кабинет.Газ.2019</span></li>
+                <li><img class="icon" src="img/naftogazpostach.com.png" alt="naftogazpostach.com"><a href="https://naftogazpostach.com/" target="_blank">naftogazpostach</a><span class="opisi">Кабин.Газ.2019</span></li>
                 <li><img class="icon" src="img/minfin.com.ua.ico" alt="minfin.com.ua"><a href="https://index.minfin.com.ua/tariff/electric/" target="_blank">minfin.com.ua</a><span class="opisi">офц.цена.электр.</span></li>
                 <li><img class="icon" src="img/kiroe.com.ua.ico" alt="kiroe.com.ua"><a href="http://kiroe.com.ua/" target="_blank">kiroe</a><span class="opisi">Кабинет.Кир.обленерго</span></li>
                 <li><img class="icon" src="img/ukrtelecom.ua.png" alt="ukrtelecom.ua"><a href="https://new.ukrtelecom.ua/payment/#generate-bill" target="_blank">ukrtelecom</a><span class="opisi">Укртелеком СЧЕТ</span></li>
@@ -453,7 +453,7 @@
                 <li><img class="icon" src="img/xtremex3.com.ico" alt="xtremex3.com"><a href="http://xtremex3.com/" target="_blank">xtremex3.com</a></li>
                 <li><img class="icon" src="img/z1.fm.ico" alt="z1.fm"><a href="https://z1.fm/" target="_blank">z1.fm</a></li>
                 <li><img class="icon" src="img/nnmclub.to.png" alt="nnmclub.to"><a href="http://nnmclub.to/forum/portal.php?c=25" target="_blank">nnm.Сборники</a><span class="opisi">нужен TORRENT</span></li>
-                <li><img class="icon" src="img/nnmclub.to.png" alt="nnmclub.to"><a href="http://nnmclub.to/forum/index.php?c=16" target="_blank">nnm.Вся.Музыка</a><span class="opisi">нужен TORRENT</span></li>
+                <li><img class="icon" src="img/nnmclub.to.png" alt="nnmclub.to"><a href="http://nnmclub.to/forum/index.php?c=16" target="_blank">nnm.Вся.Муз.</a><span class="opisi">нужен TORRENT</span></li>
               </ul>
             </div>
 
@@ -936,7 +936,7 @@
                 <hr>
                 <li><img class="icon" src="img/minfin.com.ua.ico" alt="minfin.com.ua"><a href="https://index.minfin.com.ua/tariff/gas/" target="_blank">minfin.com.ua</a><span class="opisi">офц.цена.газ</span></li>
                 <li><img class="icon" src="img/prostobank.ua.png" alt="prostobank.ua"><a href="http://www.prostobank.ua/spravochniki/indikatory_rynka/gas_tariff" target="_blank">prostobank.ua</a><span class="opisi">цена.газ</span></li>
-                <li><img class="icon" src="img/naftogazpostach.com.png" alt="naftogazpostach.com"><a href="https://naftogazpostach.com/" target="_blank">naftogazpostach</a><span class="opisi">Кабинет.Газ.2019</span></li>
+                <li><img class="icon" src="img/naftogazpostach.com.png" alt="naftogazpostach.com"><a href="https://naftogazpostach.com/" target="_blank">naftogazpostach</a><span class="opisi">Кабин.Газ.2019</span></li>
                 <li><img class="icon" src="img/gasolina-online.com.png" alt="gasolina-online.com"><a href="https://gasolina-online.com/" target="_blank">gasolina</a><span class="opisi">Кабинет.Газ.(старый)</span></li>
                 <li><img class="icon" src="img/104.ua.png" alt="104.ua"><a href="https://104.ua/ua/" target="_blank">104.ua</a><span class="opisi">Поиск компании</span></li>
               </ul>
@@ -946,7 +946,7 @@
                 <li><img class="icon" src="img/minfin.com.ua.ico" alt="minfin.com.ua"><a href="https://index.minfin.com.ua/tariff/electric/" target="_blank">minfin.com.ua</a><span class="opisi">офц.цена.электр.</span></li>
                 <li><img class="icon" src="img/prostobank.ua.png" alt="prostobank.ua"><a href="http://www.prostobank.ua/spravochniki/indikatory_rynka/electric_tariff" target="_blank">prostobank.ua</a><span class="opisi">цена.электр.</span></li>
                 <li><img class="icon" src="img/kresc.com.ua.png" alt="kresc.com.ua"><a href="http://kresc.com.ua/index.html" target="_blank">kresc.com.ua</a><span class="opisi">Киров.ОЕК</span></li>
-                <li><img class="icon" src="img/kiroe.com.ua.ico" alt="kiroe.com.ua"><a href="http://kiroe.com.ua/" target="_blank">kiroe.com</a><span class="opisi">Кабинет.Кир.обленерго</span></li>
+                <li><img class="icon" src="img/kiroe.com.ua.ico" alt="kiroe.com.ua"><a href="http://kiroe.com.ua/" target="_blank">kiroe.com</a><span class="opisi">Кабин.Кир.обленерго</span></li>
               </ul>
               <ul id="">
                 <span class="badge badge-success">*Вода*</span>
@@ -966,7 +966,7 @@
                 <hr>
                 <li><img class="icon" src="img/ukrtelecom.ua.png" alt="ukrtelecom.ua"><a href="https://new.ukrtelecom.ua/internet/" target="_blank">ukrtelecom</a><span class="opisi">Укртелеком Тариф</span></li>
                 <li><img class="icon" src="img/ukrtelecom.ua.png" alt="ukrtelecom.ua"><a href="https://new.ukrtelecom.ua/payment/#generate-bill" target="_blank">ukrtelecom</a><span class="opisi">Укртелеком СЧЕТ</span></li>
-                <li><img class="icon" src="img/my.ukrtelecom.ua.png" alt="my.ukrtelecom.ua"><a href="http://www.my.ukrtelecom.ua/" target="_blank">my.ukrtelecom</a><span class="opisi">Укртелеком КАБИНЕТ</span></li>
+                <li><img class="icon" src="img/my.ukrtelecom.ua.png" alt="my.ukrtelecom.ua"><a href="http://www.my.ukrtelecom.ua/" target="_blank">my.ukrtelecom</a><span class="opisi">Укртелеком КАБИН.</span></li>
                 <li><img class="icon" src="img/novom.ulan.in.ua.png" alt="novom.ulan.in.ua"><a href="http://novom.ulan.in.ua/" target="_blank">novom.ulan.in.ua</a><span class="opisi">Ulan ISP</span></li>
                 <li><img class="icon" src="img/shtorm.net.ico" alt="shtorm.net"><a href="https://www.shtorm.net/uk" target="_blank">shtorm.net</a><span class="opisi">Shtorm</span></li>
               </ul>
@@ -974,15 +974,15 @@
                 <span class="badge badge-success">*Интернет-мобильный*</span>
                 <hr>
                 <li><img class="icon" src="img/kyivstar.ua.ico" alt="kyivstar.ua"><a href="https://kyivstar.ua/" target="_blank">kyivstar.ua</a></li>
-                <li><img class="icon" src="img/kyivstar.ua.ico" alt="pay.kyivstar.ua"><a href="https://pay.kyivstar.ua/" target="_blank">pay.kyivstar.ua</a><span class="opisi">Пополн.Киевстар</span></li>
+                <li><img class="icon" src="img/kyivstar.ua.ico" alt="pay.kyivstar.ua"><a href="https://pay.kyivstar.ua/" target="_blank">pay.kyivstar.ua</a><span class="opisi">Пополнение</span></li>
                 <li><img class="icon" src="img/vodafone.ua.png" alt="vodafone.ua"><a href="https://www.vodafone.ua/ru" target="_blank">vodafone.ua</a></li>
-                <li><img class="icon" src="img/vodafone.ua.png" alt="pay.vodafone.ua"><a href="https://pay.vodafone.ua/" target="_blank">pay.vodafone.ua</a><span class="opisi">Пополн.Vodafone</span></li>
+                <li><img class="icon" src="img/vodafone.ua.png" alt="pay.vodafone.ua"><a href="https://pay.vodafone.ua/" target="_blank">pay.vodafone.ua</a><span class="opisi">Пополнение</span></li>
                 <li><img class="icon" src="img/lifecell.ua.png" alt="lifecell.ua"><a href="https://www.lifecell.ua/" target="_blank">lifecell.ua</a></li>
-                <li><img class="icon" src="img/lifecell.ua.png" alt="oplata.lifecell.ua"><a href="https://oplata.lifecell.ua/" target="_blank">oplata.lifecell.ua</a><span class="opisi">Пополн.Lifecell</span></li>
+                <li><img class="icon" src="img/lifecell.ua.png" alt="oplata.lifecell.ua"><a href="https://oplata.lifecell.ua/" target="_blank">oplata.lifecell.ua</a><span class="opisi">Пополнение</span></li>
                 <li><img class="icon" src="img/3mob.ua.ico" alt="3mob.ua"><a href="http://3mob.ua/" target="_blank">3mob.ua</a></li>
                 <li><img class="icon" src="img/intertelecom.ua.ico" alt="intertelecom.ua"><a href="http://www.intertelecom.ua/" target="_blank">intertelecom.ua</a></li>
-                <li><img class="icon" src="img/intertelecom.ua.ico" alt="intertelecom.ua"><a href="http://www.intertelecom.ua/payments" target="_blank">intertelecom</a><span class="opisi">Пополн.Intertelecom</span></li>				
-                <li><img class="icon" src="img/intertelecom.ua.ico" alt="assa.intertelecom.ua"><a href="https://assa.intertelecom.ua/ru/login" target="_blank">assa.intertelecom</a><span class="opisi">Кабинет.Int-com</span></li>
+                <li><img class="icon" src="img/intertelecom.ua.ico" alt="intertelecom.ua"><a href="http://www.intertelecom.ua/payments" target="_blank">intertelecom</a><span class="opisi">Пополнение</span></li>				
+                <li><img class="icon" src="img/intertelecom.ua.ico" alt="assa.intertelecom.ua"><a href="https://assa.intertelecom.ua/ru/login" target="_blank">assa.intertelecom</a><span class="opisi">Кабинет</span></li>
               </ul>
             </div>
 
