--- a/index.html
+++ b/index.html
@@ -964,9 +964,9 @@
               <ul id="">
                 <span class="badge badge-success">*Интернет-кабельний*</span>
                 <hr>
-                <li><img class="icon" src="img/ukrtelecom.ua.png" alt="ukrtelecom.ua"><a href="https://new.ukrtelecom.ua/internet/" target="_blank">ukrtelecom</a><span class="opisi">Укртелеком Тариф</span></li>
-                <li><img class="icon" src="img/ukrtelecom.ua.png" alt="ukrtelecom.ua"><a href="https://new.ukrtelecom.ua/payment/#generate-bill" target="_blank">ukrtelecom</a><span class="opisi">Укртелеком СЧЕТ</span></li>
-                <li><img class="icon" src="img/my.ukrtelecom.ua.png" alt="my.ukrtelecom.ua"><a href="http://www.my.ukrtelecom.ua/" target="_blank">my.ukrtelecom</a><span class="opisi">Укртелеком КАБИН.</span></li>
+                <li><img class="icon" src="img/ukrtelecom.ua.png" alt="ukrtelecom.ua"><a href="https://new.ukrtelecom.ua/internet/" target="_blank">ukrtelecom</a><span class="opisi">ТАРИФЫ</span></li>
+                <li><img class="icon" src="img/ukrtelecom.ua.png" alt="ukrtelecom.ua"><a href="https://new.ukrtelecom.ua/payment/#generate-bill" target="_blank">ukrtelecom</a><span class="opisi">СЧЕТ</span></li>
+                <li><img class="icon" src="img/my.ukrtelecom.ua.png" alt="my.ukrtelecom.ua"><a href="http://www.my.ukrtelecom.ua/" target="_blank">my.ukrtelecom</a><span class="opisi">КАБИНЕТ</span></li>
                 <li><img class="icon" src="img/novom.ulan.in.ua.png" alt="novom.ulan.in.ua"><a href="http://novom.ulan.in.ua/" target="_blank">novom.ulan.in.ua</a><span class="opisi">Ulan ISP</span></li>
                 <li><img class="icon" src="img/shtorm.net.ico" alt="shtorm.net"><a href="https://www.shtorm.net/uk" target="_blank">shtorm.net</a><span class="opisi">Shtorm</span></li>
               </ul>
